@@ -2,11 +2,13 @@ package ca.ulaval.glo2003.repository;
 
 import static ca.ulaval.glo2003.util.Constante.*;
 
+import ca.ulaval.glo2003.domain.entity.Availability;
 import ca.ulaval.glo2003.domain.entity.Owner;
 import ca.ulaval.glo2003.domain.entity.Reservation;
 import ca.ulaval.glo2003.domain.entity.Restaurant;
 import ca.ulaval.glo2003.domain.exception.NotFoundException;
 import ca.ulaval.glo2003.util.Util;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,8 +27,11 @@ public class RestaurantRepositoryInMemory implements IRestaurantRepository {
   }
 
   @Override
-  public Owner getOwner(String ownerId) {
-    return owners.stream().filter(owner -> owner.getOwnerId().equals(ownerId)).toList().getFirst();
+  public Owner getOwner(String ownerId) throws NotFoundException {
+    return owners.stream()
+        .filter(owner -> owner.getOwnerId().equals(ownerId))
+        .findFirst()
+        .orElseThrow(() -> new NotFoundException(OWNER_NOT_FOUND));
   }
 
   @Override
@@ -47,7 +52,7 @@ public class RestaurantRepositoryInMemory implements IRestaurantRepository {
 
   @Override
   public Owner addOwner(String ownerId) {
-    Owner owner = new Owner(ownerId, "Doe", "John", "418-222-2222");
+    Owner owner = new Owner(ownerId);
     owners.add(owner);
     return owner;
   }
@@ -103,10 +108,7 @@ public class RestaurantRepositoryInMemory implements IRestaurantRepository {
       throws NotFoundException {
 
     if (reservation.getNumber() == null) reservation.setNumber(Util.generateId());
-    owners.stream()
-        .flatMap(owner -> owner.getRestaurants().stream())
-        .collect(Collectors.toList())
-        .stream()
+    owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
         .filter(restaurant -> restaurant.getId().equals(restaurantId))
         .findFirst()
         .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND))
@@ -162,5 +164,56 @@ public class RestaurantRepositoryInMemory implements IRestaurantRepository {
                 .filter(restaurant -> restaurant.getId().equals(restaurantId))
                 .findFirst()
                 .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND)));
+  }
+
+  public boolean isExistAvailabilityForADate(String restaurantId, LocalDate date)
+      throws NotFoundException {
+    return !getAvailabilitiesForADate(restaurantId, date).isEmpty();
+  }
+
+  public List<Availability> getAvailabilitiesForADate(String restaurantId, LocalDate date)
+      throws NotFoundException {
+    return getRestaurantById(restaurantId).getAvailabilities().stream()
+        .filter(availability -> availability.getStart().toLocalDate().equals(date))
+        .toList();
+  }
+
+  public void addAvailabilitiesForADate(String restaurantId, LocalDate date) {
+    owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
+        .filter(restaurant -> restaurant.getId().equals(restaurantId))
+        .toList()
+        .getFirst()
+        .addAvailabilities(date);
+  }
+
+  public void updateAvailability(Availability updatedAvailability) {
+    owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
+        .filter(restaurant -> restaurant.getId().equals(updatedAvailability.getRestaurantId()))
+        .findFirst()
+        .ifPresent(restaurant -> restaurant.setAvailability(updatedAvailability));
+  }
+
+  @Override
+  public void deleteReservation(String reservationNumber, String restaurantId)
+      throws NotFoundException {
+    owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
+        .filter(restaurant -> restaurant.getId().equals(restaurantId))
+        .findFirst()
+        .ifPresent(restaurant -> restaurant.removeReservation(reservationNumber));
+  }
+
+  @Override
+  public List<Reservation> getRerservationsByRestaurantId(String ownerId, String restaurantId)
+      throws NotFoundException {
+    return owners.stream()
+        .filter(owner -> owner.getOwnerId().equals(ownerId))
+        .findFirst()
+        .orElseThrow(() -> new NotFoundException(OWNER_NOT_FOUND))
+        .getRestaurants()
+        .stream()
+        .filter(restaurant -> restaurant.getId().equals(restaurantId))
+        .findFirst()
+        .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND))
+        .getReservationList();
   }
 }
